# testing_parallelization_strategies

./: .gitignore  CMakeLists.txt  ExamplesTaskBased.cpp  ExamplesTaskBased.h  Gradient_matrix.cpp  Gradient_matrix.h  Gradient_matrix_variations.cpp  Gradient_matrix_variations.h  Image.cpp  Image.h  MaxTopRightRectangle.cpp  MaxTopRightRectangle.h  MaxTopStrip.cpp  MaxTopStrip.h  ModeOf.cpp  ModeOf.h  TestDepFlowGraph.cpp  TestDepFlowGraph.h  Utils.cpp  Utils.h  levenshtein.c  levenshtein.pluto.c  levenshtein.pluto.cloog  longest_common_subsequence.cpp  longest_common_subsequence.h  main.cpp  mtrr.sh  parallel_strategies_test_mtrr.csv  parallel_strategies_test_mtrr_aux.csv  parallel_strategies_testing.cbp  plot_max_top_right_rectangle.py
div/: CMakeLists.txt  MaxBlockOnesCustomSplit.cpp  mbo_test  measure.sh
n2/: Gradient_matrix.cpp  Gradient_matrix.h  Gradient_matrix_variations.cpp  Gradient_matrix_variations.h  MaxTopRightRectangle.cpp  MaxTopRightRectangle.h  MaxTopStrip.cpp  MaxTopStrip.h  longest_common_subsequence.cpp  longest_common_subsequence.h
